[tool.poetry]
name = "pycobol"
version = "0.1.0"
description = ""
authors = ["Eric German <german.eric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
#pytest = "^5.2"
jupyter = "^1.0.0"
MiniMock = "^1.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
